Thu Jun  7 10:13:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Thread_Mutex.h:
        * ace/Dynamic_Message_Strategy.h:
        * ace/Message_Queue.h:
        * ace/Metrics_Cache_T.h:
          Doxygen fixes

Wed Jun  6 14:46:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XSCRT/Traversal.hpp:
        * ace/XML_Utils/XSCRT/Traversal.tpp:
          Readded tpp file, shouldn't have been deleted

Wed Jun  6 13:09:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XMLSchema/Traversal.hpp:
        * ace/XML_Utils/XMLSchema/Types.hpp:
        * ace/XML_Utils/XMLSchema/Writer.hpp:
        * ace/XML_Utils/XSCRT/Elements.hpp:
        * ace/XML_Utils/XSCRT/Parser.hpp:
        * ace/XML_Utils/XSCRT/Traversal.hpp:
        * ace/XML_Utils/XSCRT/Writer.hpp:
        * ace/XML_Utils/XSCRT/XML.hpp:
          Removed includes

        * ace/XML_Utils/XMLSchema/Traversal.tpp:
        * ace/XML_Utils/XMLSchema/Types.tpp:
        * ace/XML_Utils/XMLSchema/Writer.tpp:
        * ace/XML_Utils/XSCRT/Elements.tpp:
        * ace/XML_Utils/XSCRT/Parser.tpp:
        * ace/XML_Utils/XSCRT/Traversal.tpp:
        * ace/XML_Utils/XSCRT/Writer.tpp:
        * ace/XML_Utils/XSCRT/XML.tpp:
          Removed these files.

Wed Jun  6 10:27:33 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XML.mpc:
          Install fixes

Wed Jun  6 08:12:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XML.mpc:
          Install fixes

Fri Jun  1 12:43:48 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Thread_Mutex.cpp:
        * ace/Message_Queue_T.h:
        * ace/Message_Queue_T.cpp:
        * ace/Thread_Semaphore.h:
        * ace/Time_Policy.h:
        * ace/Timer_Hash_T.h:
          Doxygen fixes

Thu May 31 14:05:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Added new library
